--- a/capstone/public/index.html
+++ b/capstone/public/index.html
@@ -5,16 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+      <meta
+        name="description"
+        content="Little Lemon Restaurant opens everyday every hour"
+      />
+      <meta name="og:title" content="Little Lemon Restaurant" />
+      <meta
+        name="og:description"
+        content="We can offer fast food, but at the same time healthy food"
+      />
+      <meta name="og:image" content="Wonderful Food" />
+      <title>Document</title>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
